--- a/static/styles/catalog.css
+++ b/static/styles/catalog.css
@@ -9,6 +9,10 @@ span.full-width {
   width: 100%;
 }
 
+#accordion {
+  margin-bottom: 20px;
+}
+
 .application-logo {
   height: 20px;
 }
@@ -57,6 +61,10 @@ span.full-width {
 .geoservice-child > h5.first,
 .inspire-child > h5.first {
   margin-top: 0;
+}
+
+.panel-group {
+  margin-bottom: 0;
 }
 
 .panel-info .panel-heading a:hover {
