--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -201,17 +201,17 @@
                               <div class="panel panel-info inspire-service-panel">
                                 <div class="panel-heading">
                                   <h4 class="panel-title">
-                                    <a class="accordion-link" data-toggle="collapse" href="#inspire-service-{{ link.parent_id }}">
+                                    <a class="accordion-link" data-toggle="collapse" href="#inspire-service-{{ inspire_theme.id }}-{{ link.parent_id }}">
                                       <span class="full-width">{{ link.title }}</span>
                                       <small>
-                                        {% for group in link.parent_id|get_inspire_theme_link_children_groups() %}
+                                        {% for group in link.parent_id|get_inspire_theme_link_children_groups(link.title) %}
                                           <span class="full-width link-group-tag">{{ group.group }}</span>
                                         {% endfor %}
                                       </small>
                                     </a>
                                   </h4>
                                 </div>
-                                <div id="inspire-service-{{ link.parent_id }}" class="panel-collapse collapse">
+                                <div id="inspire-service-{{ inspire_theme.id }}-{{ link.parent_id }}" class="panel-collapse collapse">
                                   <div class="panel-body">
                                     {% set tags = link.parent_id|get_inspire_theme_link_children_tags() %}
                                     {% if tags|length > 0 %}
@@ -222,7 +222,7 @@
                                         {% endfor %}
                                       </span>
                                     {% endif %}
-                                    {% for child in link.parent_id|get_inspire_theme_link_links() %}
+                                    {% for child in link.parent_id|get_inspire_theme_link_links(link.title) %}
                                       <div class="inspire-child">
                                         <h5 {% if tags|length == 0 %}class="first"{% endif %}><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> {{ child.group }}</h5>
                                         <span class="full-width"><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> {{ _('Thema') }}</span>
