--- a/templates/imprint.html
+++ b/templates/imprint.html
@@ -28,7 +28,7 @@
     <h4 class="subheadline">{{ _('Herausgeberin') }}</h4>
     <p>
       <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
-      <span class="full-width">{{ _('Büro des Oberbürgermeisters') }}</span>
+      <span class="full-width">{{ _('Büro der Oberbürgermeisterin') }}</span>
       <span class="full-width">{{ _('Presse- und Informationsstelle') }}</span>
       <span class="full-width">18050 Rostock</span>
       <span class="full-width">{{ _('Telefon') }}: +49 381 381-1417</span>
@@ -39,7 +39,7 @@
     <h4 class="subheadline">{{ _('Verantwortung gemäß § 7 Abs. 1 Telemediengesetz') }}</h4>
     <p>
       <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
-      <span class="full-width">{{ _('Büro des Oberbürgermeisters') }}</span>
+      <span class="full-width">{{ _('Büro der Oberbürgermeisterin') }}</span>
       <span class="full-width">Ulrich Kunze</span>
       <span class="full-width">{{ _('Pressesprecher Presse- und Informationsstelle') }}</span>
       <span class="full-width">18050 Rostock</span>
