--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -36,7 +36,7 @@
     <h4 class="subheadline">{{ _('Kontakt') }}</h4>
     <p>
       <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
-      <span class="full-width">{{ _('Büro des Oberbürgermeisters') }}</span>
+      <span class="full-width">{{ _('Büro der Oberbürgermeisterin') }}</span>
       <span class="full-width">{{ _('Behördlicher Datenschutz') }}</span>
       <span class="full-width">18050 Rostock</span>
       <a href="mailto:datenschutz@rostock.de">datenschutz@rostock.de</a>
