minor changes to imprint and privacy policy

--- a/templates/imprint.html
+++ b/templates/imprint.html
@@ -52,7 +52,7 @@
       <span class="full-width">{{ _('Kataster-, Vermessungs- und Liegenschaftsamt') }}</span>
       <span class="full-width">Holbeinplatz 14</span>
       <span class="full-width">18069 Rostock</span>
-      {{ _('E-Mail') }}: <a href="mailto:geodienste@rostock.de">geodienste@rostock.de</a>
+      <a href="mailto:geodienste@rostock.de">geodienste@rostock.de</a>
     </p>
     <h4 class="subheadline">{{ _('Haftung für angebotene Inhalte') }}</h4>
     <p>{{ _('Trotz sorgfältigen Recherchen und Prüfungen übernimmt die Hanse- und Universitätsstadt Rostock für die Richtigkeit, Vollständigkeit und Aktualität der von ihr angebotenen Inhalte keine Gewähr und keine Haftung. Insbesondere haftet die Hanse- und Universitätsstadt Rostock nicht für Schäden, die durch die direkte oder indirekte Nutzung oder Nichtnutzung der angebotenen Inhalte verursacht werden. Die Hanse- und Universitätsstadt Rostock behält es sich ferner ausdrücklich vor, einzelne Inhalte oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen. Die Hanse- und Universitätsstadt Rostock ist als Diensteanbieterin gemäß § 7 Abs. 1 Telemediengesetz (TMG) für ihre eigenen Inhalte, die sie zur Nutzung bereithält, verantwortlich. Gemäß §§ 8 bis 10 TMG ist sie jedoch nicht verpflichtet, von fremden Eigentümern übermittelte oder gespeicherte Inhalte, die sie zur Nutzung bereithält, auf etwaige Rechtsverletzungen zu überprüfen. Gleichwohl verpflichtet sie sich zur umgehenden Entfernung betroffener Inhalte ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung.') }}</p>
