--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -25,6 +25,22 @@
   {% include 'navbar.html' %}
   <div class="container-fluid">
     <h3 class="headline">{{ subtitle }}</h3>
+    <h4 class="subheadline">{{ _('Datenverarbeitende Stelle') }}</h4>
+    <p>
+      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
+      <span class="full-width">{{ _('Kataster-, Vermessungs- und Liegenschaftsamt') }}</span>
+      <span class="full-width">Holbeinplatz 14</span>
+      <span class="full-width">18069 Rostock</span>
+      <a href="mailto:geodienste@rostock.de">geodienste@rostock.de</a>
+    </p>
+    <h4 class="subheadline">{{ _('Behördliche Datenschutzbeauftragte') }}</h4>
+    <p>
+      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
+      <span class="full-width">{{ _('Büro der Oberbürgermeisterin') }}</span>
+      <span class="full-width">{{ _('Behördlicher Datenschutz') }}</span>
+      <span class="full-width">18050 Rostock</span>
+      <a href="mailto:datenschutz@rostock.de">datenschutz@rostock.de</a>
+    </p>
     <h4 class="subheadline">{{ _('Nutzung des vorliegenden Angebotes der Hanse- und Universitätsstadt Rostock') }}</h4>
     <p>{{ _('Die Nutzung des vorliegenden Angebotes der Hanse- und Universitätsstadt Rostock ist ohne Angabe personenbezogener Daten möglich.') }}</p>
     <h4 class="subheadline">{{ _('Protokollierung') }}</h4>
@@ -33,14 +49,6 @@
     <p>{{ _('Das vorliegende Angebot der Hanse- und Universitätsstadt Rostock verwendet keine Cookies.') }}</p>
     <h4 class="subheadline">{{ _('Sicherheit') }}</h4>
     <p>{{ _('Die Hanse- und Universitätsstadt Rostock setzt für das vorliegende Angebot technische und organisatorische Sicherheitsmaßnahmen ein, um gespeicherte und verwendete Daten gegen zufällige oder vorsätzliche Manipulation, Verlust, Zerstörung oder gegen den Zugriff unberechtigter Dritter zu schützen. Die Sicherheitsmaßnahmen werden entsprechend der technologischen Entwicklung fortlaufend verbessert.') }}</p>
-    <h4 class="subheadline">{{ _('Kontakt') }}</h4>
-    <p>
-      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
-      <span class="full-width">{{ _('Büro der Oberbürgermeisterin') }}</span>
-      <span class="full-width">{{ _('Behördlicher Datenschutz') }}</span>
-      <span class="full-width">18050 Rostock</span>
-      <a href="mailto:datenschutz@rostock.de">datenschutz@rostock.de</a>
-    </p>
   </div>
   {% if not mobile %}
     {% include 'footer.html' %}
